nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: nginx-namespace
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
